--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
         // --- Member Management ---
         const addMember = () => {
              if(!newMemberName.trim()) return;
-             if(data.settings?.members.includes(newMemberName.trim())) {
+             if(data.settings?.members?.includes(newMemberName.trim())) {
                  return;
              }
              const newMembers = [...(data.settings?.members || []), newMemberName.trim()];
@@ -994,7 +994,7 @@
         
         const removeMember = (name) => {
             openConfirm(`確定要移除成員 ${name} 嗎？`, () => {
-                const newMembers = data.settings.members.filter(m => m !== name);
+                const newMembers = data.settings?.members?.filter(m => m !== name) || [];
                 const newSettings = { ...data.settings, members: newMembers };
                 saveToFirebase("settings", newSettings);
                 
@@ -1060,8 +1060,8 @@
           setExpenseForm({ 
               item: "", 
               total: "", 
-              payer: data.settings.members[0] || "", // Reset to default first member
-              involved: [...data.settings.members] // Reset to all members
+              payer: data.settings?.members?.[0] || "", // Reset to default first member
+              involved: [...(data.settings?.members || [])] // Reset to all members
           });
           setEditingExpenseId(null);
         };
@@ -1083,8 +1083,8 @@
             setExpenseForm({ 
                 item: "", 
                 total: "", 
-                payer: data.settings.members[0] || "",
-                involved: [...data.settings.members]
+                payer: data.settings?.members?.[0] || "",
+                involved: [...(data.settings?.members || [])]
             });
         };
 
@@ -1232,7 +1232,7 @@
                           />
                           新增購物項目
                         </h2>
-                        <div className="flex gap-3">
+                        <div className="flex flex-col md:flex-row gap-3">
                           <input
                             value={newItem.name}
                             onChange={(e) =>
@@ -1254,10 +1254,10 @@
                               })
                             }
                             placeholder="數"
-                            className="w-20 p-3 bg-stone-50 rounded-2xl border-2 border-transparent focus:border-jp-sakura text-center text-sm focus:bg-white transition-colors"
+                            className="w-full md:w-20 p-3 bg-stone-50 rounded-2xl border-2 border-transparent focus:border-jp-sakura text-center text-sm focus:bg-white transition-colors"
                           />
                         </div>
-                        <div className="flex gap-3">
+                        <div className="flex flex-col md:flex-row gap-3">
                           <input
                             value={newItem.note}
                             onChange={(e) =>
@@ -1271,7 +1271,7 @@
                           />
                           <button
                             onClick={addShop}
-                            className="bg-jp-red hover:bg-[#ff8fa3] text-white px-6 rounded-2xl font-bold shadow-md active:scale-95 transition-all flex items-center gap-2"
+                            className="w-full md:w-auto bg-jp-red hover:bg-[#ff8fa3] text-white px-6 py-3 md:py-0 rounded-2xl font-bold shadow-md active:scale-95 transition-all flex justify-center items-center gap-2"
                           >
                             <Icon path={ICONS.plus} size={22} />
                           </button>
@@ -1422,7 +1422,7 @@
                                     <span className="text-jp-ink/60 text-xs font-bold">
                                     每人分擔 ({expenseForm.involved.length}人)
                                     </span>
-                                    <span className={`text-xl font-bold ${editingExpenseId ? "text-jp-fuji-dark" : "text-jp-matcha"} font-mono`}>
+                                    <span className={`text-xl ${editingExpenseId ? "text-jp-fuji-dark" : "text-jp-matcha"} font-mono`}>
                                     ¥{" "}
                                     {expenseForm.total && expenseForm.involved.length > 0
                                         ? Math.round(
@@ -1518,7 +1518,7 @@
                                 </div>
                                 </div>
                                 <div className="flex items-center gap-3 pl-2">
-                                <div className="text-right mr-2 hidden sm:block">
+                                <div className="text-right mr-2 flex-shrink-0">
                                     <div className="text-[10px] text-jp-matcha font-bold mb-0.5 whitespace-nowrap">
                                     每人 ({ex.involved ? ex.involved.length : ex.people})
                                     </div>
@@ -1586,7 +1586,7 @@
                           />
                           新增推薦
                         </h2>
-                        <div className="flex gap-3">
+                        <div className="flex flex-col md:flex-row gap-3">
                           <input
                             value={mustBuyForm.area}
                             onChange={(e) =>
@@ -1597,7 +1597,7 @@
                             }
                             list="area-list"
                             placeholder="區域 (例如: 梅田)"
-                            className="w-1/3 p-3 bg-stone-50 rounded-2xl border-2 border-transparent focus:border-jp-mikan text-sm focus:bg-white transition-colors"
+                            className="w-full md:w-1/3 p-3 bg-stone-50 rounded-2xl border-2 border-transparent focus:border-jp-mikan text-sm focus:bg-white transition-colors"
                           />
                           <datalist id="area-list">
                             {(data.mustBuy || []).map((z) => (
