--- a/index.html
+++ b/index.html
@@ -984,139 +984,165 @@
                     {(currentDay.events || []).map((e) => (
                       <div
                         key={e.id}
-                        className="kawaii-card p-5 relative group h-fit"
+                        className="flex gap-3 md:gap-6 relative group"
                       >
-                        {reorderingDayId && (
-                          <div className="absolute top-2 right-2 text-app-blue p-2 cursor-move z-10 drag-handle">
-                            <Icon path={ICONS.grip} size={20} />
-                          </div>
-                        )}
-                        <div className="flex justify-between items-start mb-3">
-                          <span className="font-mono text-xl font-black text-app-blue bg-orange-50 px-2 py-1 rounded-lg border border-white">
-                            {e.time}
-                          </span>
-                          {!reorderingDayId && (
-                            <button
-                              onClick={() => setEditingEventId(e.id)}
-                              className="text-gray-300 hover:text-app-blue"
-                            >
-                              <Icon path={ICONS.edit} size={16} />
-                            </button>
-                          )}
+                         {/* Left Column: Time */}
+                        <div className="w-20 md:w-24 flex-shrink-0 flex flex-col items-end pt-4 pr-3">
+                            <span className="font-mono font-black text-app-blue text-xl md:text-2xl whitespace-nowrap">{e.time}</span>
                         </div>
-                        {editingEventId === e.id ? (
-                          <div className="space-y-3">
-                            <input
-                              value={e.location}
-                              onChange={(ev) =>
-                                updateItineraryLocal(
-                                  currentDay.id,
-                                  e.id,
-                                  "location",
-                                  ev.target.value
-                                )
-                              }
-                              className="w-full bg-orange-50 rounded-xl px-3 py-2 text-sm font-bold"
-                            />
-                            <input
-                              value={e.time}
-                              onChange={(ev) =>
-                                updateItineraryLocal(
-                                  currentDay.id,
-                                  e.id,
-                                  "time",
-                                  ev.target.value
-                                )
-                              }
-                              className="w-full bg-orange-50 rounded-xl px-3 py-2 text-sm"
-                            />
-                            <input
-                              value={e.transport}
-                              onChange={(ev) =>
-                                updateItineraryLocal(
-                                  currentDay.id,
-                                  e.id,
-                                  "transport",
-                                  ev.target.value
-                                )
-                              }
-                              className="w-full bg-orange-50 rounded-xl px-3 py-2 text-xs"
-                              placeholder="交通"
-                            />
-                            <textarea
-                              value={e.note}
-                              onChange={(ev) =>
-                                updateItineraryLocal(
-                                  currentDay.id,
-                                  e.id,
-                                  "note",
-                                  ev.target.value
-                                )
-                              }
-                              className="w-full bg-orange-50 rounded-xl px-3 py-2 text-xs"
-                              rows="2"
-                            ></textarea>
-                            <div className="flex gap-2">
-                              <button
-                                onClick={saveSingleEvent}
-                                className="flex-1 bg-theme-green text-white py-2 rounded-xl text-xs font-bold shadow-md"
-                              >
-                                儲存
-                              </button>
-                              <button
-                                onClick={() => {
-                                  openConfirm("刪除?", () => {
-                                    const newData = data.itinerary.map((d) =>
-                                      d.id === currentDay.id
-                                        ? {
-                                            ...d,
-                                            events: d.events.filter(
-                                              (x) => x.id !== e.id
-                                            ),
-                                          }
-                                        : d
-                                    );
-                                    setData((p) => ({
-                                      ...p,
-                                      itinerary: newData,
-                                    }));
-                                    save("itinerary", newData);
-                                    setEditingEventId(null);
-                                  });
-                                }}
-                                className="px-3 bg-red-100 text-red-400 rounded-xl"
-                              >
-                                <Icon path={ICONS.trash} size={16} />
-                              </button>
+
+                        {/* Middle Column: Timeline */}
+                        <div className="relative flex flex-col items-center w-6 flex-shrink-0">
+                             {/* Line */}
+                             <div className="w-0.5 bg-orange-200 h-full absolute top-0"></div>
+                             {/* Dot */}
+                             <div className="w-3 h-3 bg-app-blue rounded-full border-2 border-[#fff8f0] z-10 mt-7 shadow-sm"></div>
+                        </div>
+
+                        {/* Right Column: Card */}
+                        <div className="flex-1 pb-6 pt-2 min-w-0">
+                          {reorderingDayId && (
+                            <div className="absolute top-2 right-2 text-app-blue p-2 cursor-move z-20 drag-handle">
+                                <Icon path={ICONS.grip} size={20} />
                             </div>
-                          </div>
-                        ) : (
-                          <>
-                            <h3 className="text-lg font-bold text-theme-text mb-2">
-                              {e.location}
-                            </h3>
-                            {e.transport && (
-                              <div className="inline-flex items-center gap-1.5 bg-gray-100 text-gray-500 px-3 py-1 rounded-full text-xs font-bold mb-3 border border-gray-200">
-                                <Icon path={ICONS.train} size={12} />{" "}
-                                {e.transport}
-                              </div>
-                            )}
-                            {e.note && (
-                              <div className="mt-2 pt-2 border-t-2 border-dashed border-gray-100 text-sm text-gray-500 whitespace-pre-line">
-                                <LinkifiedText text={e.note} />
-                              </div>
-                            )}
-                          </>
-                        )}
+                          )}
+                           
+                           {/* Content Card */}
+                           <div className="kawaii-card p-4 md:p-5 relative">
+                                <div className="flex justify-between items-start mb-2">
+                                     <h3 className="text-lg font-bold text-theme-text mb-1 flex-1">
+                                        {e.location}
+                                    </h3>
+                                    {!reorderingDayId && (
+                                        <button
+                                        onClick={() => setEditingEventId(e.id)}
+                                        className="text-gray-300 hover:text-app-blue flex-shrink-0 ml-2"
+                                        >
+                                        <Icon path={ICONS.edit} size={16} />
+                                        </button>
+                                    )}
+                                </div>
+                                
+                                {editingEventId === e.id ? (
+                                    <div className="space-y-3 mt-2">
+                                        <input
+                                        value={e.location}
+                                        onChange={(ev) =>
+                                            updateItineraryLocal(
+                                            currentDay.id,
+                                            e.id,
+                                            "location",
+                                            ev.target.value
+                                            )
+                                        }
+                                        className="w-full bg-orange-50 rounded-xl px-3 py-2 text-sm font-bold"
+                                        />
+                                        <input
+                                        value={e.time}
+                                        onChange={(ev) =>
+                                            updateItineraryLocal(
+                                            currentDay.id,
+                                            e.id,
+                                            "time",
+                                            ev.target.value
+                                            )
+                                        }
+                                        className="w-full bg-orange-50 rounded-xl px-3 py-2 text-sm"
+                                        />
+                                        <input
+                                        value={e.transport}
+                                        onChange={(ev) =>
+                                            updateItineraryLocal(
+                                            currentDay.id,
+                                            e.id,
+                                            "transport",
+                                            ev.target.value
+                                            )
+                                        }
+                                        className="w-full bg-orange-50 rounded-xl px-3 py-2 text-xs"
+                                        placeholder="交通"
+                                        />
+                                        <textarea
+                                        value={e.note}
+                                        onChange={(ev) =>
+                                            updateItineraryLocal(
+                                            currentDay.id,
+                                            e.id,
+                                            "note",
+                                            ev.target.value
+                                            )
+                                        }
+                                        className="w-full bg-orange-50 rounded-xl px-3 py-2 text-xs"
+                                        rows="2"
+                                        ></textarea>
+                                        <div className="flex gap-2">
+                                        <button
+                                            onClick={saveSingleEvent}
+                                            className="flex-1 bg-theme-green text-white py-2 rounded-xl text-xs font-bold shadow-md"
+                                        >
+                                            儲存
+                                        </button>
+                                        <button
+                                            onClick={() => {
+                                            openConfirm("刪除?", () => {
+                                                const newData = data.itinerary.map((d) =>
+                                                d.id === currentDay.id
+                                                    ? {
+                                                        ...d,
+                                                        events: d.events.filter(
+                                                        (x) => x.id !== e.id
+                                                        ),
+                                                    }
+                                                    : d
+                                                );
+                                                setData((p) => ({
+                                                ...p,
+                                                itinerary: newData,
+                                                }));
+                                                save("itinerary", newData);
+                                                setEditingEventId(null);
+                                            });
+                                            }}
+                                            className="px-3 bg-red-100 text-red-400 rounded-xl"
+                                        >
+                                            <Icon path={ICONS.trash} size={16} />
+                                        </button>
+                                        </div>
+                                    </div>
+                                    ) : (
+                                    <>
+                                        {e.transport && (
+                                        <div className="inline-flex items-center gap-1.5 bg-gray-100 text-gray-500 px-3 py-1 rounded-full text-xs font-bold mb-3 border border-gray-200">
+                                            <Icon path={ICONS.train} size={12} />{" "}
+                                            {e.transport}
+                                        </div>
+                                        )}
+                                        {e.note && (
+                                        <div className="mt-1 pt-2 border-t-2 border-dashed border-gray-100 text-sm text-gray-500 whitespace-pre-line">
+                                            <LinkifiedText text={e.note} />
+                                        </div>
+                                        )}
+                                    </>
+                                    )}
+                           </div>
+                        </div>
                       </div>
                     ))}
                     {!reorderingDayId && (
-                      <button
-                        onClick={() => addItineraryEventLocal(currentDay.id)}
-                        className="w-full border-3 border-dashed border-white/50 bg-white/20 hover:bg-white/40 rounded-[2rem] p-6 flex flex-col items-center justify-center text-gray-400 hover:text-app-blue transition-all font-bold md:h-full min-h-[150px]"
-                      >
-                        <Icon path={ICONS.plus} size={24} /> 新增活動
-                      </button>
+                       <div className="flex gap-3 md:gap-6 pl-0 md:pl-0"> 
+                           <div className="w-20 md:w-24 flex-shrink-0"></div> {/* Spacer for time column */}
+                           <div className="w-6 flex-shrink-0 relative flex justify-center">
+                               <div className="w-0.5 bg-orange-200 h-8 absolute top-0"></div>
+                           </div>
+                           <div className="flex-1">
+                                <button
+                                    onClick={() => addItineraryEventLocal(currentDay.id)}
+                                    className="w-full border-3 border-dashed border-white/50 bg-white/20 hover:bg-white/40 rounded-[2rem] p-6 flex flex-col items-center justify-center text-gray-400 hover:text-app-blue transition-all font-bold min-h-[100px]"
+                                >
+                                    <Icon path={ICONS.plus} size={24} /> 新增活動
+                                </button>
+                           </div>
+                       </div>
                     )}
                   </SortableDayList>
                 </div>
